--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <ul>
                 <li>
                     <img src="img/1.png" alt="">
-                    <a>原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</a>
+                    <a class="opinion">原來聊天機器人可以這麼有人性！團隊有完整的行銷計畫提供數位整合，讓我們公司的產品用更活潑的方式讓使用者認識。</a>
                     <p>清心寡慾設計公司</p>
                     <div class="star">
                         <a>Lina 執行長</a>
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                     <img src="img/2.png" alt="">
-                    <a>團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</a>
+                    <a class="opinion">團隊很積極的協助行銷追蹤，針對機器人進行優化，讓我們一個月內提高10000個追蹤者，客戶體驗回饋很正面！</a>
                     <p>subwhat 行銷公司</p>
                     <div class="star">
                         <a>Zoe 活動長</a>
@@ -142,7 +142,7 @@
                 </li>
                 <li>
                     <img src="img/3.png" alt="">
-                    <a>經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</a>
+                    <a class="opinion">經營了好久的IG，一直無法提升粉絲數，和團隊合作後，才知道可以用聊天機器人玩這麼豐富的行銷活動！太讚拉～</a>
                     <p>油土伯</p>
                     <div class="star">                        
                         <a>HowBig</a>
