--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     
     <div class="wrap">
-        <img class="bgimg yw" src="img/bg_yellow.png" >
-        <img class="bgimg ball" src="img/Ellipse 3.png" >
-
+        <img class="bgimg r-0" src="img/bg_yellow.png" >
+        <img class="bgimg l250-t600" src="img/Ellipse 3.png" >
+        <img class="bgimg r100-t1740" src="img/Ellipse 18.png" >
+        <img class="bgimg l100-t1740" src="img/Ellipse 19.png" >
 
         <header class="navbar">
-            <h1 class="logo"><img src="img/logo.svg" alt="chatTalker"></h1>
+            <h1 class="logo"><a href="index.html"><img src="img/logo.svg" alt="chatTalker"></a></h1>
             <p class="button navbt"> <a href="">方案費用</a></p>
         </header>
 
