--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="wrap">
-        <img class="bgimg r-0" src="img/bg_yellow.png" >
+        <img class="bg bgimg r-0" src="img/bg_yellow.png" >
         <img class="bgimg l250-t600" src="img/Ellipse 3.png" >
         <img class="bgimg r100-t1740" src="img/Ellipse 18.png" >
         <img class="bgimg l100-t1740" src="img/Ellipse 19.png" >
