--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header class="navbar">
             <h1 class="logo"><a href="index.html"><img src="img/logo.svg" alt="chatTalker"></a></h1>
-            <p class="button navbt"> <a href="">方案費用</a></p>
+            <p class="button navbt"> <a href="vip.htm">方案費用</a></p>
         </header>
 
         <div class="banner">
@@ -90,7 +90,7 @@
                 <p>深入用戶日常，成為用戶貼身好友 </p>
                 <p>精準傳遞品牌資訊，打造個人化專屬服務 </p>
                 <p>不知不覺深入用戶生活，成為用戶貼心的好朋朋:D</p>
-                <p class="button bt"> <a href="#">方案費用</a></p>
+                <p class="button bt"> <a href="vip.htm">方案費用</a></p>
             </div>
             <ul>
                 <li>
@@ -158,7 +158,7 @@
             <img src="img/bg.png" alt="">
             <div>
                 <h3>\ 美好用戶體驗，從對話開始 /</h3>
-                <p class="button bt"> <a href="#">方案費用</a></p>
+                <p class="button bt"> <a href="vip.htm">方案費用</a></p>
             </div>
             <p class="ft"> © 2022 chatTalker. All Rights Reserved.</p>
         </footer>
