--- a/vip.htm
+++ b/vip.htm
@@ -59,7 +59,7 @@
                             <li><a class="tick">√</a>可設定 50 種分眾標籤</li>
                             <li><a class="tick">√</a>客服人機轉接</li>
                         </ul>
-                        <p class="button btx"> <a href="vip.htm">方案費用</a></p>
+                        <p class="button btx"> <a href="#">立即體驗</a></p>
                     </li>
                     <li class="both">
                         <h4>標準版</h4>
@@ -84,7 +84,7 @@
                             <li><a class="tick">√</a>可設定 500 種分眾標籤</li>
                             <li><a class="tick">√</a>客服人機轉接＋自動指派專員處理</li>
                         </ul>
-                        <p class="button btx"> <a href="vip.htm">方案費用</a></p>
+                        <p class="button btx"> <a href="#">立即體驗</a></p>
                     </li>
                 </ul>
             </div>
