--- a/vip.htm
+++ b/vip.htm
@@ -15,6 +15,7 @@
         <header class="navbar">
             <h1 class="logo"><a href="index.html"><img src="img/logo.svg" alt="chatTalker"></a></h1>
             <p class="button navbt"> <a href="vip.htm">方案費用</a></p>
+            <div class="bg"></div>
         </header>
 
         <div class="method">
