--- a/vip.htm
+++ b/vip.htm
@@ -41,7 +41,7 @@
 
         <div class="vipcard mg-auto">
             <ul class="candyfather flex fw-wrap jc-around">
-                <li class="both ta-center b-radius20">
+                <li class="both ta-center b-radius20 bx-shadow">
                     <h4 class="bold24">基本版</h4>
                     <p class="regular16">提供中小企業最必要的功能</p>
                     <p class="regular16">完整建立分眾以達到精準的行銷自動化</p>
@@ -66,7 +66,7 @@
 
                     <p class="button bt mg-auto ta-center"> <a class="block bttext regular18-w" href="#">立即體驗</a></p>
                 </li>
-                <li class="both ta-center b-radius20">
+                <li class="both ta-center b-radius20 bx-shadow">
                     <h4 class="bold24">標準版</h4>
                     <p class="regular16">建立企業流量池，全通路數據整合與交換</p>
                     <p class="regular16">高可靠性服務</p>
