--- a/vip.htm
+++ b/vip.htm
@@ -96,36 +96,21 @@
 
         <div class="question mg-auto ta-center">
             <h3 class="mg-button48">常見問題</h3>
-            <ul>
-                <li class="mg-button16 b-radius20">
-                    <div class="flex jc-between">
-                        <p class="regular18">我要怎麼變更方案</p>
-                        <span class="color-b bold24">+</span>
-                    </div>
-                    <div class="ans">
-                        <a class="regular16-g">請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</a>
-                    </div>
-                </li>
-                <li class="mg-button16 b-radius20">
-                    <div class="flex jc-between">
-                        <p class="regular18">如果我沒有line官方帳號怎麼辦</p>
-                        <span class="color-b bold24">+</span>
-                    </div>
-                    <div class="ans">
-                        <a class="regular16-g">沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</a>
-                    </div>
-                </li>
-                <li class="mg-button16 b-radius20">
-                    <div class="flex jc-between">
-                        <p class="regular18">非上班日有客服支援嗎?</p>
-                        <span class="color-b bold24">+</span>
-                    </div>
-                    <div class="ans">
-                        <a class="regular16-g">當然哦！我們錢都收了，不會拋棄你的！</a>
-                        <a class="regular16-g">請你直接來我們公司，我們假日也都在辦公室</a>
-                    </div>
-                </li>
-            </ul>
+            <section>
+                <details class="b-radius20" >
+                    <summary class="regular18" >我要怎麼變更方案</summary>
+                    <p class="regular16-g">請聯絡您的業務專員修改訂閱方案，我們將為您進行變更流程。</p>
+                </details>
+                <details class="b-radius20">
+                    <summary class="regular18">如果我沒有line官方帳號怎麼辦</summary>
+                    <p class="regular16-g">沒關係的，只要您是我們任何一個方案的夥伴，我們的專員可以協助辦理哦！</p>
+                </details>
+                <details class="b-radius20">
+                    <summary class="regular18">非上班日有客服支援嗎?</summary>
+                    <p class="regular16-g">當然哦！我們錢都收了，不會拋棄你的！</p>
+                    <p class="regular16-g">請你直接來我們公司，我們假日也都在辦公室</p>
+                </details>
+            </section>
         </div>
     </div>
     
