--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             regular16-w" href="vip.htm">方案費用</a></p>
         </header>
 
-        <div class="banner max-w1085 flex fw-wrap jc-around ai-center mg-auto ">
+        <div class="banner max-w1085 flex fw-wrap jc-between ai-center mg-auto ">
             <div class="mg-button30">
                 <p class="bold18-b ">ChatTalker最全面的聊天機器人</p>
                 <h2 class="">你愛我像誰?</h2>
